Sun Mar 15 22:44:33 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkmenushell.c (gtk_menu_shell_button_release): for now reverted
	the last change, since it broke click-select-click menus for gimp.

Sun Mar 15 20:13:42 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkmain.c (gtk_quit_destructor): removed the ugly check whether
	we need gtk_widget_destroy or gtk_object_destroy. these functions are
	by no means allowed to act differently!

	* gtk/gtkmisc.c (gtk_misc_set_alignment): check for _DRAWABLE instead
	of _VISIBLE to operate on widget->window.
	(gtk_misc_set_padding): likewise.

	* gtk/gtkwidget.c: slightly reordered object arguments.

	* gtk/gtkobject.c (gtk_object_setv):
	* gtk/gtkobject.c (gtk_object_getv):
 	operator `!' has precedence over `&'.

Sun Mar 15 14:38:34 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtknotebook.c (gtk_notebook_pages_allocate): applied a fix from
	lars against a segfault that i discovered.

Sun Mar 15 13:25:28 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkwidget.h: added new flag GTK_EXCLUSIVE_GRAB.
	* gtk/gtkmain.c: allow exclusive grabs.

	* gtk/gtkmenu.c: grab exclusively.
	* gtk/gtkmenushell.c: grab exclusively.

	* gtk/gtkmenushell.c: don't activate insensitive menu items when
	in click-selects mode.

	* gtk/gtkmenushell.c (gtk_menu_shell_enter_notify): activate submenus
	on popup.

	* gtk/gtkmenushell.c (gtk_menu_shell_button_release): don't take
 	*additional* button presses into account.

	* gtk/gtkmenushell.c (gtk_menu_shell_button_press): don't take
	foreign button releases into account.

Sun Mar 15 08:27:06 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtktipsquery.c (gtk_tips_query_set_labels): changed run type
	of GtkTipsQuery::widget_entered to GTK_RUN_LAST, so it can be overidden
	by the user.

	* gtk/gtkwindow.c (gtk_window_configure_event): small fix by
	Assar Westerlund <assar@sics.se>.

	* gtk/gtkmenu.c (gtk_menu_key_press): don't cast a NULL pointer.

Sat Mar 14 19:36:16 PST 1998 Shawn T. Amundson <amundson@gimp.org>
